--- a/.travis.yml
+++ b/.travis.yml
@@ -115,7 +115,8 @@ deploy:
     # channel to use to produce the release artifacts
     # NOTE make sure you only release *once* per target
     # TODO you may want to pick a different channel
-    condition: $CHANNEL = stable
+    #condition: $CHANNEL = stable
+    condition: true
     tags: true
 
 branches:
