Revert "release all channels"
This reverts commit af57195d3996e817c95cb83f8d2c4c40d12da193.

--- a/.travis.yml
+++ b/.travis.yml
@@ -115,8 +115,7 @@ deploy:
     # channel to use to produce the release artifacts
     # NOTE make sure you only release *once* per target
     # TODO you may want to pick a different channel
-    #condition: $CHANNEL = stable
-    condition: true
+    condition: $CHANNEL = stable
     tags: true
 
 branches:
